improve the page, add descriptions and links

--- a/index.html
+++ b/index.html
@@ -63,7 +63,17 @@
 
  <p class="project-description">give me a json schema, I give you a form, give me the data (user input) I give you a validated json object matching the json schema</p>
 
+ <h2>Test it</h2>
+
+ <p>go to the <a href="js/json.edit.js">test page</a> to run the unit tests</p>
+
+ <h2>Download it</h2>
+
+ <p><a href="js/json.edit.js">json-edit</a></p>
+
  <h2>Try it!</h2>
+
+ <p>edit the JSON on the left, click run and see it on the right</p>
 
  <script>
 
@@ -130,6 +140,7 @@
       }
      });
  </script>
+
+ <a href="https://github.com/you"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 </body>
 </html>
->>>>>>> master
