point test link to the correct page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
  <h2>Test it</h2>
 
- <p>go to the <a href="js/json.edit.js">test page</a> to run the unit tests</p>
+ <p>go to the <a href="test/">test page</a> to run the unit tests</p>
 
  <h2>Download it</h2>
 
