--- a/index.html
+++ b/index.html
@@ -19,44 +19,10 @@
   };
  </script>
 
-	<script src="js/demos.js"></script>
 	<script src="js/json.edit.js"></script>
+	<script src="js/demos.js"></script>
+ <script src="js/demo.js"></script>
 
- <style type="text/css" media="screen">
-.demo-box{
- width: 97.9%;
- display: table;
- border: 1px solid #ddd;
- margin: 0.5%;
- padding: 0.5%;
- background-color: #eee;
-}
-   
-.editor { 
- margin: 0;
- position: relative;
- font-size: 1em;
- width: 49%;
- height: 25em;
- float: left;
-}
-
-.demo-out{
- margin: 0;
- float: right;
- border: 1px solid #666;
- height: 25em;
- width: 50%;
- overflow: auto;
- background-color: #fff;
-}
-
-.demo-run{
- float: right;
- clear: both;
- margin: 0.5em 0;
-}
- </style>
 </head>
 <body>
  <h1>Json Edit</h1>
@@ -74,72 +40,6 @@
  <h2>Try it!</h2>
 
  <p>edit the JSON on the left, click run and see it on the right</p>
-
- <script>
-
-     function startEditor(id, title, description, content) {
-      var editor, outputId = id + "-out";
-
-      function updateDemo() {
-        var content = editor.getSession().getDocument().getValue(), data;
-
-        try {
-         data = JSON.parse(content);
-        } catch (error) {
-         alert(error);
-         return;
-        }
-
-        $("#" + outputId).html("");
-        jsonEdit(outputId, data);
-      }
-
-      $("body")
-       .append($.lego(
-        {
-         "div": {
-          "class": "demo-box",
-          "$childs": [
-           {"h3": title},
-           {"p": {"class": "demo-desc", "$childs": description}},
-           {
-            "pre": {
-             "id": id,
-             "class": "editor",
-             "$childs": JSON.stringify(content, null, 2)
-            }
-           },
-           {"div": {"id": outputId, "class": "demo-out"}},
-           {
-            "button": {
-             "id": id + "-action",
-             "class": "demo-run", 
-             "$childs": "run", 
-             "$click": function () {
-              updateDemo();
-             }
-            }
-           }
-          ]
-         }
-        }));
-
-      editor = ace.edit(id);
-      editor.setTheme("ace/theme/merbivore_soft");
-      editor.getSession().setMode("ace/mode/json");
-      updateDemo();
-
-      return editor;
-     }
-
-     var i;
-
-     $(function () {
-      for (i = 0; i < demos.length; i += 1) {
-       startEditor("editor" + i, demos[i][0], demos[i][1], demos[i][2]);
-      }
-     });
- </script>
 
  <a href="https://github.com/marianoguerra/json-edit"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 </body>
