add collect method to collect the values, stub validation

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 <body>
  <h1>Json Edit</h1>
 
- <p class="project-description">give me a json schema, I give you a form, give me the data (user input) I give you a validated json object matching the json schema</p>
+ <p class="project-description">give me a json schema, I give you a form, give
+ me the data (user input) I give you a validated json object matching the json
+ schema</p>
 
  <h2>Test it</h2>
 
