take json schema validation and nsgen to own modules

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   };
  </script>
 
+	<script src="js/nsgen.js"></script>
+	<script src="js/json.schema.js"></script>
 	<script src="js/json.edit.js"></script>
 	<script src="js/demos.js"></script>
  <script src="js/demo.js"></script>
