--- a/test/index.html
+++ b/test/index.html
@@ -15,6 +15,8 @@
    "exportPrivates": true
   };
   </script>
+	<script src="../js/nsgen.js"></script>
+	<script src="../js/json.schema.js"></script>
 	<script src="../js/json.edit.js"></script>
 	<script src="json.edit.test.js"></script>
 </head>
