--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
 	<title>Json Edit</title>
 	<link rel="stylesheet" href="css/json.edit.css">
 	<link rel="stylesheet" href="css/demo.json.edit.css">
+	<link rel="stylesheet" href="http://google-code-prettify.googlecode.com/svn/trunk/src/prettify.css">
+
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script src="https://raw.github.com/marianoguerra/legojs/master/jquery.lego.web.js"></script>
 	<script src="https://raw.github.com/ajaxorg/ace-builds/master/src-min/ace.js"></script>
 	<script src="https://raw.github.com/ajaxorg/ace-builds/master/src-min/mode-json.js"></script>
 	<script src="https://raw.github.com/ajaxorg/ace-builds/master/src-min/theme-merbivore_soft.js"></script>
+ <script src='http://cdnjs.cloudflare.com/ajax/libs/prettify/188.0.0/prettify.js'></script>
  
  <script>
   window._jsonEditOpts = {
@@ -43,7 +46,9 @@
 
  <h2>Try it!</h2>
 
- <p>edit the JSON on the left, click run and see it on the right</p>
+ <p>edit the JSON on the left, click <em>run</em> and see it on the right,
+   enter some data, click <em>validate</em> and see the result at the
+   bottom.</p>
 
  <a href="https://github.com/marianoguerra/json-edit"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 </body>
