improve demo, make deep nesting work better

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
  <h1>Json Edit</h1>
 
- <p class="project-description">give me a json schema, I give you a form, give
+ <p class="project-description">give me a <a href="http://json-schema.org">json schema</a>, I give you a form, give
  me the data (user input) I give you a validated json object matching the json
  schema</p>
 
