migrate all to AMD with optional global export

--- a/index.html
+++ b/index.html
@@ -8,26 +8,8 @@
 	<link rel="stylesheet" href="css/demo.json.edit.css">
 	<link rel="stylesheet" href="http://google-code-prettify.googlecode.com/svn/trunk/src/prettify.css">
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script src="https://raw.github.com/marianoguerra/legojs/master/jquery.lego.web.js"></script>
-	<script src="https://raw.github.com/ajaxorg/ace-builds/master/src-min/ace.js"></script>
-	<script src="https://raw.github.com/ajaxorg/ace-builds/master/src-min/mode-json.js"></script>
-	<script src="https://raw.github.com/ajaxorg/ace-builds/master/src-min/theme-merbivore_soft.js"></script>
- <script src='http://cdnjs.cloudflare.com/ajax/libs/prettify/188.0.0/prettify.js'></script>
+	<script data-main="js/demo" src="http://requirejs.org/docs/release/2.0.2/minified/require.js"></script>
  
- <script>
-  window._jsonEditOpts = {
-   "global": true,
-   "exportPrivates": true
-  };
- </script>
-
-	<script src="js/nsgen.js"></script>
-	<script src="js/json.schema.js"></script>
-	<script src="js/json.edit.js"></script>
-	<script src="js/demos.js"></script>
- <script src="js/demo.js"></script>
-
 </head>
 <body>
  <h1>Json Edit</h1>
