first addon, tags, allows to edit array of strings in a single field

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 	<link rel="stylesheet" href="css/demo.json.edit.css">
 	<link rel="stylesheet" href="http://google-code-prettify.googlecode.com/svn/trunk/src/prettify.css">
 
+ <link  type="text/css" rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/themes/start/jquery-ui.css" />
+	<link rel="stylesheet" href="http://ioncache.github.com/Tag-Handler/css/jquery.taghandler.css">
+ <style>
+  .je-tagHandler ul.tagHandlerContainer { margin: 0; }
+ </style>
+
+
 	<script data-main="js/demo" src="http://requirejs.org/docs/release/2.0.2/minified/require.js"></script>
  
 </head>
@@ -24,7 +31,7 @@
 
  <h2>Download it</h2>
 
- <p><a href="js/json.edit.js">json-edit</a></p>
+ <p><a href="src/json.edit.js">json-edit</a></p>
 
  <h2>Try it!</h2>
 
