use requirejs from a cdn

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  </style>
 
 
-	<script data-main="js/demo" src="http://requirejs.org/docs/release/2.0.2/minified/require.js"></script>
+	<script data-main="js/demo" src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.0.2/require.min.js"></script>
  
 </head>
 <body>
