add squim hint to edit code in a visual way

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Json Edit</title>
 	<link rel="stylesheet" href="css/json.edit.css">
 	<link rel="stylesheet" href="css/demo.json.edit.css">
+	<link rel="stylesheet" href="http://marianoguerra.github.com/squide/css/squide.css">
 	<link rel="stylesheet" href="http://google-code-prettify.googlecode.com/svn/trunk/src/prettify.css">
 
  <link  type="text/css" rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/themes/smoothness/jquery-ui.css" />
