add summarylist addon that allows to list and manipulate array of objects

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   .je-tagHandler ul.tagHandlerContainer { margin: 0; }
  </style>
 
+	<link rel="stylesheet" href="src/addons/summarylist/addon.css">
 
 	<script data-main="js/demo" src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.0.2/require.min.js"></script>
  
