fix dump to xml to textarea

--- a/eflang/index.html
+++ b/eflang/index.html
@@ -20,7 +20,7 @@
       function onToXmlClick() {
        var xml = getXml();
        console.log(xml);
-       document.getElementById("xml").value = xml;
+       document.getElementById("textarea_xml").value = xml;
       }
 
       function loadXmlToWorkspace(xmlText) {
