--- a/eflang/frame.html
+++ b/eflang/frame.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" >
+
   <title>eflang</title>
   <!--
   <script type="text/javascript" src="blockly_compressed.js"></script>
