add color picker block to blockly eflang

--- a/eflang/index.html
+++ b/eflang/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" >
 
   <title>eflang</title>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script src="jquery-1.8.2.js"></script>
   <script>
    $(function () {
     var id = "foo";
