--- a/eflang/frame.html
+++ b/eflang/frame.html
@@ -5,7 +5,7 @@
 
   <title>eflang</title>
   <!--
-  <script type="text/javascript" src="blockly_compressed.js"></script>
+  <script type="text/javascript" src="blockly_uncompressed.js"></script>
 
   <script type="text/javascript" src="generators/javascript.js"></script>
   <script type="text/javascript" src="generators/javascript/control.js"></script>
@@ -25,6 +25,7 @@
   <script type="text/javascript" src="language/common/variables.js"></script>
   <script type="text/javascript" src="language/common/procedures.js"></script>
 
+  <script type="text/javascript" src="picker.js"></script>
   <script type="text/javascript" src="language.js"></script>
   -->
 
