--- a/eflang/frame.html
+++ b/eflang/frame.html
@@ -5,7 +5,7 @@
 
   <title>eflang</title>
   <!--
-  <script type="text/javascript" src="blockly_uncompressed.js"></script>
+  <script type="text/javascript" src="blockly_compressed.js"></script>
 
   <script type="text/javascript" src="generators/javascript.js"></script>
   <script type="text/javascript" src="generators/javascript/control.js"></script>
@@ -13,6 +13,7 @@
   <script type="text/javascript" src="generators/javascript/math.js"></script>
   <script type="text/javascript" src="generators/javascript/text.js"></script>
   <script type="text/javascript" src="generators/javascript/lists.js"></script>
+  <script type="text/javascript" src="generators/javascript/colour.js"></script>
   <script type="text/javascript" src="generators/javascript/variables.js"></script>
   <script type="text/javascript" src="generators/javascript/procedures.js"></script>
 
@@ -22,10 +23,10 @@
   <script type="text/javascript" src="language/common/math.js"></script>
   <script type="text/javascript" src="language/common/text.js"></script>
   <script type="text/javascript" src="language/common/lists.js"></script>
+  <script type="text/javascript" src="language/common/colour.js"></script>
   <script type="text/javascript" src="language/common/variables.js"></script>
   <script type="text/javascript" src="language/common/procedures.js"></script>
 
-  <script type="text/javascript" src="picker.js"></script>
   <script type="text/javascript" src="language.js"></script>
   -->
 
