--- a/src/addons/blockly/frame.html
+++ b/src/addons/blockly/frame.html
@@ -1,7 +1,14 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" >
+
   <title>eflang</title>
+
+  <!--[if lt IE 10]>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/es5-shim/1.2.4/es5-shim.min.js "></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"></script>
+  <![endif]-->
   <script type="text/javascript" src="lib/eflang.min.js"></script>
 
   <style>
@@ -10,8 +17,6 @@
       margin: 0;
       padding:0;
       overflow: hidden;
-    }
-    .blocklySvg {
       height: 100%;
       width: 100%;
     }
