demos load from a combo

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
  <h2>Try it!</h2>
 
- <p>edit the JSON on the left, click <em>run</em> and see it on the right,
+ <p>select a demo on the combo, edit the JSON on the left, click <em>run</em> and see it on the right,
    enter some data, click <em>validate</em> and see the result at the
    bottom.</p>
 
@@ -168,6 +168,10 @@
    <category name="Variables" custom="VARIABLE"></category>
    <category name="Procedures" custom="PROCEDURE"></category>
  </xml>
+
+ <select id='demo-selector' style="margin-left: 25%; width: 50%;"></select>
+
+ <div id="demo-cont"></div>
 
 </body>
 </html>
