add new blocks to demo

--- a/eflang/index.html
+++ b/eflang/index.html
@@ -108,7 +108,7 @@
 
      <block type="controls_flow_statements"></block>
    </category>
-   <category name="Object">
+   <category name="Others">
     <block type="variables_outget"></block>
     <block type="variables_outset"></block>
     <block type="variables_getpath"></block>
@@ -116,6 +116,12 @@
     <block type="objs_create_with"></block>
 
     <block type="const_get"></block>
+
+    <block type="db_fetch"></block>
+    <block type="db_store"></block>
+
+    <block type="procs_call_with"></block>
+    <block type="procs_call_with_no_return"></block>
    </category>
    <category name="Logic">
      <block type="logic_compare"></block>
@@ -167,6 +173,7 @@
        </value>
      </block>
      <block type="math_random_float"></block>
+     <block type="math_set_precision"></block>
    </category>
    <category name="Text">
      <block type="text"></block>
