--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
     <block type="objs_create_with"></block>
 
     <block type="const_get"></block>
+    <block type="procs_call_with"></block>
+    <block type="procs_call_with_no_return"></block>
    </category>
    <category name="Logic">
      <block type="logic_compare"></block>
@@ -122,6 +124,7 @@
        </value>
      </block>
      <block type="math_random_float"></block>
+     <block type="math_set_precision"></block>
    </category>
    <category name="Text">
      <block type="text"></block>
