--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
      <block type="controls_flow_statements"></block>
    </category>
-   <category name="Object">
+   <category name="Others">
     <block type="variables_outget"></block>
     <block type="variables_outset"></block>
     <block type="variables_getpath"></block>
@@ -71,6 +71,10 @@
     <block type="objs_create_with"></block>
 
     <block type="const_get"></block>
+
+    <block type="db_fetch"></block>
+    <block type="db_store"></block>
+
     <block type="procs_call_with"></block>
     <block type="procs_call_with_no_return"></block>
    </category>
