add is null? [] blockly

--- a/eflang/index.html
+++ b/eflang/index.html
@@ -181,6 +181,7 @@
      <block type="logic_negate"></block>
      <block type="logic_boolean"></block>
      <block type="logic_null"></block>
+     <block type="logic_is_null"></block>
      <block type="logic_ternary"></block>
    </category>
    <category name="Math">
