add if [] otherwise [] blockly

--- a/eflang/index.html
+++ b/eflang/index.html
@@ -183,6 +183,7 @@
      <block type="logic_null"></block>
      <block type="logic_is_null"></block>
      <block type="logic_ternary"></block>
+     <block type="logic_or_else"></block>
    </category>
    <category name="Math">
      <block type="math_number"></block>
