--- a/eflang/index.html
+++ b/eflang/index.html
@@ -262,6 +262,7 @@
      <block type="lists_getIndex"></block>
      <block type="lists_setIndex"></block>
      <block type="lists_ops"></block>
+     <block type="lists_contains"></block>
    </category>
    <category name="Colour">
      <block type="colour_picker"></block>
