--- a/eflang/frame.html
+++ b/eflang/frame.html
@@ -3,6 +3,7 @@
   <meta charset="utf-8">
   <title>Blockly Code</title>
   <script type="text/javascript" src="blockly_compressed.js"></script>
+  <script type="text/javascript" src="blocks_compressed.js"></script>
   <script type="text/javascript" src="javascript_compressed.js"></script>
   <script type="text/javascript" src="en_compressed.js"></script>
   <script type="text/javascript" src="language.js"></script>
