--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Json Edit</title>
-        <link rel="stylesheet" href="http://marianoguerra.github.com/squide/css/squide.css">
-        <link rel="stylesheet" href="http://google-code-prettify.googlecode.com/svn/trunk/src/prettify.css">
+        <link rel="stylesheet" href="//marianoguerra.github.com/squide/css/squide.css">
+        <link rel="stylesheet" href="//google-code-prettify.googlecode.com/svn/trunk/src/prettify.css">
 
-        <link  type="text/css" rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/themes/smoothness/jquery-ui.css" />
-        <link rel="stylesheet" href="http://ioncache.github.com/Tag-Handler/css/jquery.taghandler.css">
+        <link  type="text/css" rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/themes/smoothness/jquery-ui.css" />
+        <link rel="stylesheet" href="//ioncache.github.com/Tag-Handler/css/jquery.taghandler.css">
 
         <link rel="stylesheet" href="src/addons/summarylist/addon.css">
         <link rel="stylesheet" href="css/json.edit.css">
         <link rel="stylesheet" href="css/demo.json.edit.css">
         <link rel="stylesheet" type="text/css" href="src/addons/color/picker/spectrum.css">
 
-        <script data-main="js/demo" src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.0.2/require.min.js"></script>
+        <script data-main="js/demo" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.0.2/require.min.js"></script>
     </head>
     <body>
         <h1>Json Edit</h1>
